added github link

--- a/weather-app-project-doc/index.html
+++ b/weather-app-project-doc/index.html
@@ -106,6 +106,10 @@
           </div>
         </div>
         <p>This Project was coded by Sonia Obinna-Uzoh</p>
+        <br />
+        <a href="https://github.com/sobinnau/weather-app-project" target="blank"
+          >GitHub</a
+        >
       </div>
     </div>
     <script src="src/index.js"></script>
