improved code and added celsius and fahrenheit features on js

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <h1 id="city">Lagos</h1>
         <ul>
-          <li id="dates">Tuesday 10.39, fog</li>
+          <li id="date">Tuesday 10.39, fog</li>
           <li id="description"></li>
           <ul>
             <li>Humidity: <span id="humidity"></span>%</li>
@@ -104,7 +104,10 @@
         </div>
         <p>This Project was coded by Sonia Obinna-Uzoh</p>
         <br />
-        <a href="https://github.com/sobinnau/weather-app-project" target="blank"
+        <a
+          href="https://github.com/sobinnau/weather-app-project"
+          id="github-link"
+          target="blank"
           >GitHub</a
         >
       </div>
