added line break between cityname and search box + made github link centered

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="col-3"></div>
           </div>
         </form>
-
+        <br />
         <h1 id="city">Lagos</h1>
         <ul>
           <li id="date">Tuesday 10.39, fog</li>
@@ -102,14 +102,16 @@
             </div>
           </div>
         </div>
-        <p>This Project was coded by Sonia Obinna-Uzoh</p>
-        <br />
-        <a
-          href="https://github.com/sobinnau/weather-app-project"
-          id="github-link"
-          target="blank"
-          >GitHub</a
-        >
+        <p>
+          This Project was coded by Sonia Obinna-Uzoh
+          <br />
+          <a
+            href="https://github.com/sobinnau/weather-app-project"
+            id="github-link"
+            target="blank"
+            >GitHub</a
+          >
+        </p>
       </div>
     </div>
     <script src="src/index.js"></script>
